# cs372-CPS

./: .gitignore  CMakeLists.txt  README.md
CPS/: compoundshape.cpp  compoundshape.h  coumpoundshape.h  shape.cpp  shape.h
cps/: compoundshape.cpp  compoundshape.h  compoundshape.hpp  coumpoundshape.h  cps.hpp  example.cpp  shape.cpp  shape.h  shape.hpp
docs/: structure.txt
docs/examples/: example.cpp
testing/: hw5.cpp  main_test.cpp  test-cases.cpp  test_shape.cpp  visual_test.cpp
